<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="263dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/form_pendaftaran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="266dp"
        android:layout_height="166dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <EditText
            android:id="@+id/enama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="115dp" />

        <EditText
            android:id="@+id/ealamat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="171dp" />

        <EditText
            android:id="@+id/enohp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="228dp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgjeniskelamin"
        android:layout_width="220dp"
        android:layout_height="85dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <RadioButton
            android:id="@+id/rpria"
            android:layout_width="114dp"
            android:layout_height="37dp"
            android:text="@string/pria" />

        <RadioButton
            android:id="@+id/rwanita"
            android:layout_width="114dp"
            android:layout_height="36dp"
            android:text="@string/wanita" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lokasi_pendaftaran"
        app:layout_constraintBottom_toTopOf="@+id/blokasipendaftaran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgjeniskelamin"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_foto"
        app:layout_constraintBottom_toTopOf="@+id/bsubmit"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.602"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/blokasipendaftaran"
        android:layout_width="117dp"
        android:layout_height="53dp"
        android:layout_marginBottom="48dp"
        android:text="@string/cek_lokasi_sekarang"
        android:textSize="11dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="61dp"
        android:layout_height="19dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="52dp"
        android:text="@string/pilih_file"
        app:layout_constraintBottom_toTopOf="@+id/bsubmit"
        app:layout_constraintEnd_toStartOf="@+id/bupload"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bupload"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="52dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toTopOf="@+id/bsubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blokasipendaftaran"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="133dp"
        android:layout_height="218dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/nama"
            android:textAlignment="center"
            tools:ignore="MissingConstraints,RtlCompat"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="131dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/alamat"
            android:textAlignment="center"
            tools:ignore="RtlCompat"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="189dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/no_hp"
            android:textAlignment="center"
            tools:ignore="RtlCompat"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="245dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="172dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/jenis_kelamin"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <EditText
        android:id="@+id/eid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="58dp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/elokasi"
        android:layout_width="141dp"
        android:layout_height="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/bupload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/blokasipendaftaran"
        app:layout_constraintTop_toBottomOf="@+id/rgjeniskelamin"
        app:layout_constraintVertical_bias="0.585" />

    <EditText
        android:id="@+id/efoto"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bsubmit"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.213" />

</androidx.constraintlayout.widget.ConstraintLayout>